reset styles for collapsed codemark summaries to fix https://trello.com/c/NA5V3aFG/851-markdown-causing-display-problems-on-codemarks-tab

--- a/shared/ui/styles/codemarks.less
+++ b/shared/ui/styles/codemarks.less
@@ -70,7 +70,7 @@
 			margin: 0 !important;
 			padding: 0 !important;
 			height: auto !important;
-			display: inline;
+			display: inline !important;
 			white-space: normal;
 		}
 	}
